--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CKAT</title>
   </head>
-  <body>
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+      font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
+    "
+  >
     <div id="root"></div>
     <div id="modal"></div>
     <script type="module" src="/src/main.tsx"></script>
